Thu Mar  4 15:54:25 CET 2004 (tk)
---------------------------------
  * clamdscan: do not overwrite s_addr (thanks to Adam Stein
	       <adam*scan.mc.xerox.com>)

Thu Mar  4 13:07:04 GMT 2004 (njh)
----------------------------------
  * libclamav:	Some bounce messages weren't being rescanned, fix thanks
	to "Andrey J. Melnikoff (TEMHOTA)" <temnota*kmv.ru>

Thu Mar  4 03:29:07 CET 2004 (tk)
---------------------------------
  * libclamav: CL_ENCRYPTED: mark encrypted Zip archives as a virus type
	       "Encrypted.Zip" (Michael L Torrie <torriem*chem.byu.edu>)
  * clamscan: --detect-encrypted
  * clamd: ArchiveDetectEncrypted

Wed Mar  3 11:36:17 CET 2004 (tk)
---------------------------------
  * libclamav: mbox wrapper: scan Qmail bounces

Wed Mar  3 09:22:09 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Check clamd is running before starting (if clamd is
			on the same machine)
		If clamav-milter fails to find clamd running, state the
			expected pid
		Some debug messages changed
		Improved checking for TCP/IP to ensure TCPwrappers is
			not used when using UNIX domain sockets

Tue Mar  2 13:12:57 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: #include others.h

Tue Mar  2 13:04:15 GMT 2004 (trog)
-----------------------------------
  * clamd: intercept but ignore SIGPIPE, FreeBSD barfs

Tue Mar  2 09:35:39 CET 2004 (tk)
---------------------------------
  * clamd: removed x86 dazuko object files (thanks to Fajar A. Nugraha
	   <fajar*telkom.co.id>)

Mon Mar  1 13:22:30 GMT 2004 (trog)
-----------------------------------
  * clamd: Cleanup signal handling

Mon Mar  1 13:08:04 GMT 2004 (trog)
-----------------------------------
  * clamd: Cleanup local socket and clamd.run on exit

Mon Mar  1 01:25:03 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Removed duplicate /etc/rc.d/init.d/clamd that had
	also been put in the contrib directory