@@ -66,6 +66,9 @@
 /* Name of the daily database */
 #undef DB2NAME
 
+/* "default FD_SETSIZE value" */
+#undef DEFAULT_FD_SETSIZE
+
 /* file i/o buffer size */
 #undef FILEBUFF
 
@@ -98,6 +101,12 @@
 
 /* Define to 1 if you have the <ndir.h> header file. */
 #undef HAVE_NDIR_H
+
+/* Define to 1 if you have the `poll' function. */
+#undef HAVE_POLL
+
+/* Define to 1 if you have the <poll.h> header file. */
+#undef HAVE_POLL_H
 
 /* "pragma pack" */
 #undef HAVE_PRAGMA_PACK
